--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+-i https://pypi.org/simple
 asgiref==3.2.3
-Django==3.0.3
+django-cors-headers==3.5.0
+django==3.0.3
 djangorestframework==3.11.0
 pytz==2019.3
 sqlparse==0.3.0
